--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -53,3 +53,9 @@ header .text-container .heading .heading-border{
     width: 40%;
     background-color: var(--dark-grey);
 }
+
+@media (min-width:400px) {
+    .text-container p{
+    margin-bottom: 1em;
+    }
+}
