--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,4 +1,4 @@
-<form action="" class="form-group">
+<form  class="form-group" [formGroup]="formGroup">
     <div class="form-icon">
         <img src="../../../assets/png/icon-hour.png"/>
        <p style="margin-left:7px;">Horário</p> 
@@ -6,28 +6,30 @@
 
     <h3>Qual horário você quer treinar?</h3>
     <div class="radio-wrapper">
-        <input type="radio" name="Morning" value="mornig">
+        <input type="radio" name="hour" value="mornig" formControlName="hour">
         <label for="Morning">Manhã</label>
         <span>06:00 ás 12:00</span>
     </div>
     <div class="radio-wrapper">
-        <input type="radio" name="Tarde" value="afternoon">
+        <input type="radio" name="hour" value="afternoon" formControlName="hour">
         <label for="afternoon">Tarde</label>
         <span>12:01 ás 18:00</span>
     </div>
     <div class="radio-wrapper">
-        <input type="radio" name="Noite" value="night">
+        <input type="radio" name="hour" value="night" formControlName="hour">
         <label for="noite">Noite</label>
         <span>18:01 ás 23:00</span>
     </div>
     <div class="checkbox-wrapper">
-        <input type="checkbox" name="show-closed">
-        <label for="show-closed">Exibir unidades fechadas</label>
-        <span>Resultados encontrados:{{results.length}}</span>
+        <div class="checkbox">
+            <input type="checkbox" name="showClosed" formControlName="showClosed">
+            <label for="showClosed">Exibir unidades fechadas</label>
+        </div>
+        <span>Resultados encontrados:<a>{{results.length}}</a> </span>
     </div>
 
     <div class="btn-wrapper">
-        <button class="btn btn-primary">Encontrar unidade</button>
-        <button class="btn btn-secondary">Limpar</button>
+        <button class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
+        <button class="btn btn-secondary" (click)="onClean()">Limpar</button>
     </div>
 </form>
