--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -41,12 +41,15 @@
     border-top: 1px solid var(--light-text);
     position: relative;
     color: var(--medium-text);
-
 }
 
 .form-group .radio-wrapper span{
     position: absolute;
     right: 0px;
+}
+
+.form-group .radio-wrapper label{
+    margin-left: 4px;
 }
 
 .form-group .radio-wrapper:nth-last-child(3) {
@@ -59,6 +62,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    flex-direction: column;
 }
 
 .form-group .btn-wrapper .btn{
@@ -70,26 +74,54 @@
     padding: 12px;
     width: 25%;
     border: none;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .form-group .btn-wrapper .btn-primary{
     background-color: var(--yellow);
+    width: 100%;
 }
 
 .form-group .btn-wrapper .btn-secondary{
     background-color: transparent;
     border: 2px solid var(--light-text);
+    width: 100%;
 }
 
 .form-group .checkbox-wrapper{
     color: var(--light-grey);
     margin: 32px 0;
-    position: relative;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 6px;
+    font-weight: 600;
 }
 
-.form-group .checkbox-wrapper span{
-    position: absolute;
-    right: 0;
+.form-group .checkbox-wrapper label{
+    margin-left: 6px;
+}
+
+a {
+    margin-left: 4px;
+    }
+
+@media (min-width:768px){
+    .form-group .btn-wrapper{
+        flex-direction: row;    
+    }
+    
+    .form-group .btn-wrapper .btn{
+        width: 25%;
+    }
+    
+    .form-group .checkbox-wrapper{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    a {
+    margin-left: 4px;
+    }
 }
