--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
-h1{
-    font-family: 'Gotham';
-    color: red;
-    font-weight: 700;
+.app-containe{
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    gap: 32px;
 }
