--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -25,7 +25,7 @@
             <input type="checkbox" name="showClosed" formControlName="showClosed">
             <label for="showClosed">Exibir unidades fechadas</label>
         </div>
-        <span>Resultados encontrados:<a>{{results.length}}</a> </span>
+        <span>Resultados encontrados:<a>{{filteredResults.length}}</a> </span>
     </div>
 
     <div class="btn-wrapper">
