--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
-.app-containe{
+.app-container{
     width: 100%;
     height: 100%;
+    display: flex;
     flex-direction: column;
     gap: 32px;
 }
